copied from mathfin

--- a/index.html
+++ b/index.html
@@ -1,1 +1,39 @@
-Hello World
+<!doctype html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>Jonathan Mostovoy's GitHub Homepage</title>
+
+    <meta name="viewport" content="width=device-width">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+  </head>
+  <body>
+    
+  <div class="wrapper">
+
+ <h1>Welcome to mathfin.ca</h1>
+&nbsp;
+
+Welcome to mathfin.ca, a website run jointly by <a href="/mostovoy/">Jonathan Mostovoy</a> and <a href="/unger">Shawn Unger</a>: two students at the <a href="https://www.math.toronto.edu/">University of Toronto Mathematics Department</a>.
+
+The primary purpose of this site is for us to showcase our work and research for all to enjoy. If you happen to find any bugs or typos in our files, projects, or the page itself, please let us know.
+<h4>For more information about Jonathan Mostovoy and Shawn Unger, please visit:</h4>
+<ul>
+ 	<li><a href="/mostovoy">Jonathan Mostovoy's Homepage</a></li>
+ 	<li><a href="/unger">Shawn Unger's Homepage</a></li>
+</ul>
+<h4>Alternatively, you may jump directly to:</h4>
+<ul>
+ 	<li>Quick Links Forthcoming</li>
+</ul>
+
+<hr />
+
+All material on this web page and all sub web pages is copyright by Jonathan Mostovoy and Shawn Unger. All rights reserved.
+
+  </div>
+  </body>
+</html>
